--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-294.5KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-517.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇸🇬 新加坡-974.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-470.3KB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-565.8KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-782.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-464.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 未知国家-5.05MB/s(Youtube:不良林), server: 103.186.148.113, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.186.148.113}}
-  - {name: 🇨🇦 加拿大-468.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
-  - {name: 🇸🇬 新加坡-4.28MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.121.43.65, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-528.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-426.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-300.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-325.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-820.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
-      - 未知国家-5.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-528.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-300.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
-      - 未知国家-5.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-528.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-300.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
-      - 未知国家-5.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-528.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-300.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
-      - 未知国家-5.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-528.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-300.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
-      - 未知国家-5.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-528.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-300.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
-      - 未知国家-5.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-528.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-300.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-294.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-517.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-974.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-470.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-464.3KB/s(Youtube:不良林)
-      - 未知国家-5.05MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-468.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-355.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-528.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-300.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
