--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.63MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-426.0KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-880.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇮🇹 意大利-762.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇨🇦 加拿大-325.4KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-820.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
-  - {name: 🇨🇦 加拿大-1.39MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-336.4KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-782.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1017.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇬🇧 英国-292.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-528.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.143.66.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: 38.143.66.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-762.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-762.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-762.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-762.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-762.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-762.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇫🇷 法国-426.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-880.9KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-762.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-325.4KB/s(Youtube:不良林)
-      - 🇫🇷 法国-820.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-777.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
