--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-782.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.143.66.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1017.7KB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇬🇧 英国-292.8KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-528.7KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-2.38MB/s(Youtube:不良林), server: 85.208.108.19, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇻🇳 越南-238.9KB/s(Youtube:不良林), server: 103.147.126.127, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.147.126.127}}
+  - {name: 🇺🇸 美国-293.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇫🇷 法国-1.63MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-336.4KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.143.66.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: 38.143.66.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.78MB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
+      - 🇻🇳 越南-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
+      - 🇻🇳 越南-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
+      - 🇻🇳 越南-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
+      - 🇻🇳 越南-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
+      - 🇻🇳 越南-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
+      - 🇻🇳 越南-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-782.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1017.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-292.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-528.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.38MB/s(Youtube:不良林)
+      - 🇻🇳 越南-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-293.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-336.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.78MB/s(Youtube:不良林)
