--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.43MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇮🇹 意大利-177.7KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
-  - {name: 🇫🇷 法国-735.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: 38.143.66.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-997.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.06MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-506.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-501.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-478.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-152.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.93MB/s(Youtube:不良林), server: 38.143.66.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-565.8KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-993.6KB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.143.66.20, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-911.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-2.69MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.05MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.02MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-177.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-735.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-177.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-735.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-177.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-735.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-177.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-735.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-177.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-735.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-177.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-735.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.43MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-177.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-735.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-997.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-501.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-478.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-152.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-565.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-993.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-911.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
